; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/test/examples/extr_example_basic_2.c_control_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/test/examples/extr_example_basic_2.c_control_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_7__ = type { i32, i64 }
%struct.CONTEXT_T = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, %struct.TYPE_7__*)* @control_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @control_callback(%struct.TYPE_6__* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.CONTEXT_T*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.CONTEXT_T*
  store %struct.CONTEXT_T* %9, %struct.CONTEXT_T** %5, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  switch i32 %12, label %22 [
    i32 129, label %13
    i32 128, label %14
  ]

13:                                               ; preds = %2
  br label %23

14:                                               ; preds = %2
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i32*
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.CONTEXT_T*, %struct.CONTEXT_T** %5, align 8
  %21 = getelementptr inbounds %struct.CONTEXT_T, %struct.CONTEXT_T* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  br label %23

22:                                               ; preds = %2
  br label %23

23:                                               ; preds = %22, %14, %13
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %25 = call i32 @mmal_buffer_header_release(%struct.TYPE_7__* %24)
  %26 = load %struct.CONTEXT_T*, %struct.CONTEXT_T** %5, align 8
  %27 = getelementptr inbounds %struct.CONTEXT_T, %struct.CONTEXT_T* %26, i32 0, i32 0
  %28 = call i32 @vcos_semaphore_post(i32* %27)
  ret void
}

declare dso_local i32 @mmal_buffer_header_release(%struct.TYPE_7__*) #1

declare dso_local i32 @vcos_semaphore_post(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
